# arvel

./: .env.docker  .env.testing  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.cursor/rules/: orm-best-practices.mdc  testing-best-practices.mdc  type-safety.mdc
.docker/keycloak/: arvel-test-realm.json  setup-realm.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: PROJECT-BLUEPRINT.md
docs/guides/: architecture-overview.md  comprehensive-guide.md
docs/site/: mkdocs.yml
docs/site/en/: mkdocs.yml
docs/site/overrides/: main.html
src/arvel/: __init__.py  __main__.py  templates.json
src/arvel/activity/: __init__.py  entry.py  migration.py  recorder.py
src/arvel/app/: __init__.py  config.py
src/arvel/audit/: __init__.py  entry.py  migration.py  mixin.py  service.py
src/arvel/auth/: __init__.py  audit.py  auth_manager.py  claims.py  contracts.py  guard.py  middleware_verified.py  migration.py  oauth.py  password_reset.py  policy.py  schemas.py  tokens.py  verification.py
src/arvel/broadcasting/: __init__.py  authorizer.py  broadcastable.py  channels.py  config.py  contracts.py  exceptions.py  fake.py  listener.py  provider.py
src/arvel/cache/: __init__.py  contracts.py  exceptions.py  fakes.py
src/arvel/cli/: __init__.py  app.py  exceptions.py  logging.py  registry.py  ui.py
src/arvel/context/: __init__.py  concurrency.py  deferred.py  (+3 more)
tests/: _helpers.py  conftest.py
tests/_fixtures/: database.py  models.py
tests/activity/: conftest.py  test_recorder.py
tests/audit/: conftest.py  test_mixin.py  test_service.py
tests/auth/: test_audit.py  test_auth_manager.py  test_claims.py  test_gate_hooks.py  test_guard.py  test_guard_claims.py  test_guard_contract.py  test_multi_guard_middleware.py  test_oauth.py  test_oidc_discovery.py  test_password_reset.py  test_policy.py  test_role_policy.py  test_schemas.py  test_tokens.py  test_verification.py  test_verified_middleware.py
tests/broadcasting/: conftest.py  test_authorizer.py  test_broadcastable.py  test_channels.py  test_config.py  test_contracts.py  test_drivers.py  test_fake.py  test_provider.py  test_redis_driver.py
tests/cache/: test_config.py  test_contracts.py  test_redis_driver.py
tests/cli/: conftest.py  test_about_command.py  test_cli_app.py  test_cli_ui.py  test_config_commands.py  test_health_command.py  test_maintenance_commands.py  test_make_commands.py  test_module_discovery.py  test_name_utils.py  test_new_command.py  test_plugin_registry.py  test_publish_command.py  test_queue_commands.py  test_route_cache_commands.py  test_route_commands.py  test_scaffold.py  test_schedule_commands.py  test_serve_command.py  test_template_engine.py  test_tinker_command.py
tests/context/: conftest.py  test_concurrency.py  test_context.py  test_deferred.py  test_middleware.py
tests/data/: conftest.py  test_casts.py  test_collection.py  test_config.py  test_exceptions.py  test_materialized_view.py  test_migrations.py  test_model.py  test_morphs.py  test_observer.py  test_pagination.py  test_provider.py  test_query_builder.py  test_recursive_cte.py  test_relationships.py  test_repository.py  test_schema.py  test_scopes.py  test_seeder.py  test_soft_deletes.py  test_transaction.py
tests/events/: conftest.py  test_discovery.py  test_dispatcher.py  test_event.py  test_fake.py
tests/foundation/: test_application.py  test_config.py  test_container.py  test_exceptions.py  test_foundation_gaps.py  test_infra_provider.py  test_optional_feature_providers.py  test_pipeline.py  test_provider.py  test_type_safety_hardening.py
tests/http/: conftest.py  test_controller.py  test_controller_decorators.py  test_exception_handler.py  test_kernel.py  test_maintenance_middleware.py  test_middleware.py  test_middleware_exclusion.py  test_middleware_groups.py  test_model_binding.py  test_openapi_resource_docs.py  test_per_route_middleware.py  test_provider.py  test_resource_routes.py  test_resources.py  test_response.py  test_router.py  test_terminable_middleware.py  test_url_generation.py
tests/i18n/: test_middleware.py  test_translator.py
tests/infra/: test_docker_ci.py
tests/integration/: conftest.py
tests/lifecycle/: test_sprint1_critical_fixes.py  test_sprint2_container_performance.py  test_sprint3_bootstrap_resilience.py  test_sprint4_middleware_observability.py
tests/lock/: test_contracts.py  test_redis_driver.py
tests/mail/: test_contracts.py  test_smtp_driver.py
tests/media/: test_contracts.py  test_has_media.py  test_image_processor.py  test_spatie_features.py
tests/notifications/: test_channels.py  test_contracts.py
tests/observability/: conftest.py  test_config.py  test_exceptions.py  test_health.py  test_logging.py  test_provider.py  test_public_logger_api.py  test_request_id.py  test_sentry.py  test_tracing.py
tests/queue/: conftest.py  test_batch.py  test_chain.py  test_config.py  test_contracts.py  test_failed_job_cli.py  test_failed_jobs.py  test_fake.py  test_job.py  test_manager.py  test_middleware.py  test_taskiq_driver.py  test_unique_jobs.py  test_worker.py
tests/scheduler/: test_config.py  test_fake.py  test_lock_backend.py  test_overlap.py  test_schedule_entry.py  test_scheduler.py
tests/search/: conftest.py  test_builder.py  test_config.py  test_contracts.py  test_elasticsearch_driver.py  test_exceptions.py  test_manager.py  test_meilisearch_driver.py  test_mixin.py  test_observer.py
tests/security/: test_config.py  test_contracts.py  test_csrf.py  test_encryption.py  test_hashing.py  test_rate_limit.py
tests/storage/: test_contracts.py  test_s3_driver.py
tests/support/: test_utils.py
tests/testing_pkg/: conftest.py  test_assertions.py  test_client.py  test_database.py  test_database_assertions.py  test_factory.py  test_factory_enhancements.py  test_fake_assertions.py  test_fakes.py
tests/validation/: conftest.py  test_conditional_rules.py  test_database_rules.py  test_form_request.py  test_validator.py
(+312 files in other folders)
